# sql-steward

./: CHANGELOG.md  README.md  pyproject.toml  semantic.example.yaml  server.json
.github/workflows/: registry.yml  release.yml
integrations/vscode-sql-steward/: .vscodeignore  CHANGELOG.md  README.md  extension.js  package.json
integrations/vscode-sql-steward/schemas/: semantic.schema.json
src/sql_steward/: __init__.py  cli.py  compiler.py  embeddings.py  engine.py  introspect.py  osi_export.py  safety.py  semantic.py  server.py
tests/: test_checks.py  test_compiler.py  test_engine.py  test_introspect.py  test_osi_export.py  test_red_team.py  test_safety.py  test_semantic.py  test_server_errors.py
